# buildbot-nix

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.md  README.md  biome.json  default.nix  flake.nix  pyproject.toml
buildbot_effects/: __init__.py  cli.py  options.py  pyproject.toml
buildbot_effects/buildbot_effects/: __init__.py  cli.py  options.py  secrets.py
buildbot_effects/buildbot_effects/tests/: test_branch_rev.py  test_cli.py  test_daemon_proxy.py  test_e2e_flake_ref.py  test_flake_args.py  test_flake_url.py  test_secrets.py
buildbot_effects/tests/: test_cli.py
buildbot_nix/: __init__.py  buildbot_nix.py  common.py  errors.py  failed_builds.py  gitea_projects.py  github_projects.py  master.py  models.py  nix_status_generator.py  oauth2_proxy_auth.py  projects.py  pyproject.toml  secrets.py  worker.py
buildbot_nix/buildbot_nix/: __init__.py  ansi.py  api_tokens.py  auth.py  authz.py  bootstrap.py  build_canceller.py  build_trigger.py  buildbot_effects.py  canceller.py  common.py  config.py  db.py  db_setup.py  effects.py  effects_state.py  environ.py  errors.py  events.py  executor.py  failed_builds.py  forge.py  gitea_hooks.py  gitea_projects.py  github_projects.py  gitlab_hooks.py  gitlab_project.py  gitrepo.py  hook_secrets.py  local_worker.py  log.py  main.py  memory.py  migrations.py  models.py  nix_build.py  nix_error.py  nix_eval.py  nix_gcroot.py  nix_status_generator.py  (+21 more)
buildbot_nix/buildbot_nix/db/: __init__.py  failed_builds.py  failed_status.py
buildbot_nix/buildbot_nix/engine/: __init__.py  auth.py  config.py  effects.py  failed_builds.py  forge.py  forge_tokens.py  gcroots.py  gitrepo.py  log.py  main.py  migrations.py  models.py  nix_eval.py  orchestrator.py  outputs.py  projects.py  reconcile.py  status.py  visibility.py
buildbot_nix/buildbot_nix/engine/migrations/: 0001_initial.sql  0002_scheduled_effects.sql  0003_gitea_webhook_secrets.sql
buildbot_nix/buildbot_nix/engine/web/: __init__.py  app.py  logs.py  metrics.py
buildbot_nix/buildbot_nix/engine/web/static/: style.css
buildbot_nix/buildbot_nix/engine/web/templates/: _attributes.html  _build_row.html  attribute_history.html  build.html  index.html  log.html  project.html  queue.html  search.html
buildbot_nix/buildbot_nix/forge/: __init__.py  base.py  gitea.py  github.py  gitlab.py
buildbot_nix/buildbot_nix/github/: installation_token.py  jwt_token.py  legacy_token.py  repo_token.py
buildbot_nix/buildbot_nix/migrations/: 0007_build_effects.sql  0011_revoked_sessions.sql  0012_truncate_notify_names.sql  0013_failed_builds_per_project.sql
buildbot_nix/buildbot_nix/pull_based/: backend.py  null_reporter.py  project.py
buildbot_nix/buildbot_nix/repo_config/: __init__.py
buildbot_nix/buildbot_nix/tests/: conftest.py  support.py  test_auth.py  test_bench_pipeline.py  test_bootstrap.py  test_branch_config.py  test_canceller.py  test_control.py  test_db.py  test_effects.py  test_engine_auth.py  test_engine_canceller.py  test_engine_control.py  test_engine_db.py  test_engine_effects.py  test_engine_executor.py  test_engine_forge.py  test_engine_gcroots_outputs.py  test_engine_gitrepo.py  test_engine_nix_eval.py  test_engine_orchestrator.py  test_engine_pipeline.py  test_engine_polling.py  test_engine_post_build.py  test_engine_races.py  test_engine_recovery.py  test_engine_scheduled.py  test_engine_scheduler.py  test_engine_service.py  test_engine_status.py  test_engine_visibility.py  test_engine_web.py  test_engine_webhooks.py  test_environ.py  test_executor.py  test_forge.py  test_gcroots_outputs.py  test_gitrepo.py  test_nix_eval.py  test_nix_eval_job.py  (+14 more)
buildbot_nix/buildbot_nix/tests/e2e/: __init__.py  conftest.py  support.py  test_browse.py  test_live.py
buildbot_nix/buildbot_nix/web/: api_routes.py  app.py  auth_routes.py  control_routes.py  events.py  logs.py  metrics.py  queries.py  state_routes.py  templating.py  token_routes.py
buildbot_nix/buildbot_nix/web/static/: style.css
buildbot_nix/buildbot_nix/web/templates/: _attr_rows.html  _attributes.html  _build_row.html  _build_rows.html  _macros.html  _pipelines.html  _queue.html  _summary.html  _webhook_secret.html  activity.html  attribute_history.html  base.html  build.html  error.html  index.html  log.html  project.html  queue.html  repo.html  search.html  settings.html  tokens.html
buildbot_nix/github/: installation_token.py  jwt_token.py  legacy_token.py  repo_token.py
buildbot_nix/github/auth/: _type.py
buildbot_nix/pull_based/: backend.py  null_reporter.py  project.py
buildbot_nix/repo_config/: __init__.py
buildbot_nix/tests/: test_pydantic_models.py
checks/: buildbot-nix-gitlab.nix  buildbot-nix.nix  default.nix  docs.nix  effects.nix  engine.nix  flake-module.nix  gitea.nix  lib.nix  master.nix  nixbot-gitlab.nix  nixbot.nix  poller.nix  scheduled-effects.nix
devShells/: default.nix  flake-module.nix
docs/: EFFECTS.md  GITEA.md  GITHUB.md  GITLAB.md  KEYCLOAK.md  LOCAL_DEVELOPMENT.md  MIGRATION.md  OIDC.md  OPTIONS.md  conf.py  index.md  requirements.txt  scheduler.als
docs/guides/: gitea.md  (+5 more)
examples/: attic-watch-store.nix  default.nix  disko.nix  engine.nix  flake-module.nix  fully-private-github.nix  fully-private-keycloak.nix  fully-private-oidc.nix  master.nix  nixbot.nix  oidc-authelia.nix  worker.nix
formatter/: flake-module.nix  treefmt.nix
herculesCI/: default.nix  effects-lib.nix  flake-module.nix
nix/: 0001-GiteaHandler-set-the-category-of-PR-changes-to-pull-.patch  0001-Give-access-to-full_name-in-the-GitHub-hook-properti.patch  0001-Support-per-installation-tokens-in-GithubStatusPush-.patch  0001-allow-secrets-to-be-group-readable.patch  0001-master-reporters-github-render-token-for-each-reques.patch  0001-reporter-create-status-in-the-base-repository-of-a-p.patch  0002-GiteaHandler-set-branch-to-the-PR-branch-not-the-bas.patch  buildbot-effects.nix  buildbot-gitea.nix  buildbot-nix.nix  cachix.nix  clan-module.nix  common-options.nix  flake-module.nix  lib.nix  master.nix  nix-eval-jobs.nix  option-docs.nix  packages.nix  worker.nix
nixbot/: pyproject.toml
(+148 files in other folders)
