[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "buildbot-nix"
authors = [
    { name = "Jörg Thalheim", email = "joerg@thalheim.io" },
]
description = "A nixos module to make buildbot a proper Nix-CI."
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]
version = "0.0.1"
scripts = { buildbot-effects = "hercules_effects.cli:main" }

[tool.setuptools]
packages = [
  "buildbot_nix",
  "buildbot_effects"
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "U", "N"]
ignore = [ "E501" ]

[tool.mypy]
python_version = "3.10"
pretty = true
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "buildbot.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "buildbot_worker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "twisted.*"
ignore_missing_imports = true
