[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buildbot-effects"
authors = [
    { name = "Jörg Thalheim", email = "joerg@thalheim.io" },
]
description = "CI effects for buildbot-nix"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]
version = "0.0.1"
scripts = { buildbot-effects = "buildbot_effects.cli:main" }

[tool.ruff]
target-version = "py312"
line-length = 88
[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # pydocstyle
  "D",
  # todo comments
  "TD",
  # fixmes
  "FIX",

  # commented out code
  "ERA001",

  # Trailing comma missing
  "COM812",
  # Boolean-typed positional argument in function definition
  "FBT001",
  # Logging statement uses f-string
  "G004",
  # disabled on ruff's recommendation as causes problems with the formatter
  "ISC001",
  # `subprocess` call: check for execution of untrusted input
  "S603",
  # Starting a process with a partial executable path
  "S607",

  "E501", # line too long
  "T201", # `print` found
  "PLR2004", # Magic value used in comparison

  # not compatible with twisted logger: https://docs.twisted.org/en/twisted-18.7.0/core/howto/logger.html
  "G010",  # Logging statement uses `warn` instead of `warning`
]

[tool.ruff.lint.pep8-naming]
ignore-names = [
  "checkConfig",
  "baseURL",
  "reconfigService",
  "sendMessage",
]

[tool.mypy]
python_version = "3.12"
pretty = true
warn_redundant_casts = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
