[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buildbot-nix"
license = {text = "MIT"}
authors = [
    { name = "Jörg Thalheim", email = "joerg@thalheim.io" },
]
description = "A nixos module to make buildbot a proper Nix-CI."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]
version = "0.0.1"

dependencies = [
  "pydantic",
  "requests",
  "treq",
  "psycopg2"
]


[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # pydocstyle
  "D",
  # todo comments
  "TD",
  # fixmes
  "FIX",

  # commented out code
  "ERA001",

  # Dynamically typed expressions (typing.Any)
  "ANN401",
  # Trailing comma missing
  "COM812",
  # Boolean-typed positional argument in function definition
  "FBT001",
  # Logging statement uses f-string
  "G004",
  # disabled on ruff's recommendation as causes problems with the formatter
  "ISC001",
  # Starting a process with a partial executable path
  "S607",

  "E501", # line too long
  "T201", # `print` found

  # not compatible with twisted logger: https://docs.twisted.org/en/twisted-18.7.0/core/howto/logger.html
  "G010",  # Logging statement uses `warn` instead of `warning`

  # gives falls positives and isn't hard to check munually
  "ERA001"
]

[tool.ruff.lint.pep8-naming]
ignore-names = [
  "checkConfig",
  "baseURL",
  "reconfigService",
  "sendMessage",
]

[tool.mypy]
python_version = "3.12"
pretty = true
warn_redundant_casts = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
